...
        ViewSlider.isUserInteractionEnabled = !ViewSlider.isUserInteractionEnabled
    }
    
    @IBAction func deleteAll(_ sender: UIButton)
    {
        AudioServicesPlaySystemSound(1104)
        let alertVC = UIAlertController(title: "Notice", message: "All Drawing Will be Deleted", preferredStyle: .alert)
        let acSure = UIAlertAction(title: "Delete", style: .destructive)
        {
            (UIAlertAction) -> Void in self.ViewDraw.layer.sublayers = nil
        }
        let acCancel = UIAlertAction(title: "Cancel", style: .cancel)
        {
            (UIAlertAction) -> Void in print("Cancel")
...
