...
                                    <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qG9-pS-dbj" userLabel="ButtonRed">
                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="40" id="BtP-12-iII"/>
                                            <constraint firstAttribute="height" constant="40" id="sgL-Lh-gQS"/>
                                        </constraints>
                                        <state key="normal" title="Button" image="c_red"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uLX-nJ-S1M">
                                                <rect key="frame" x="122.33333333333331" y="410" width="171" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="6fu-a4-zzn"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <state key="normal" title="enDrawy! without Login"/>
                                                <connections>
                                                    <action selector="toDraw:" destination="dP4-Fv-Jd6" eventType="touchUpInside" id="rtW-Yh-8lW"/>
                                                    <segue destination="BYZ-38-t0r" kind="show" identifier="toDraw" id="dyO-cZ-Azt"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
